fix(*): reaction gap

--- a/src/_includes/layouts/project/_base.scss
+++ b/src/_includes/layouts/project/_base.scss
@@ -158,7 +158,7 @@
         max-width: 44.5rem;
         width: 100%;
         .webmention {
-            &.reaction {
+            &.reaction.reaction {
                 .author {
                     display: flex;
                     align-items: center;
